--- a/six/index.html
+++ b/six/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="Keywords" content="FIVE">
-    <meta name="description" content="FIVE，始于2018年2月17日">
-    <title>FIVE，始于2018年2月17日</title>
+    <meta name="description" content="SIX，始于2019年11月18日">
+    <title>SIX，始于2019年11月18日</title>
     <!-- Style Sheet -->
     <link rel="stylesheet" type="text/css" media="all" href="css/style.css" />
 
@@ -12,19 +12,23 @@
     <script type="text/javascript" src="js/jquery-1.3.2.js"></script>
     <script type="text/javascript" src="js/jquery.countdown.js"></script>
     <script type="text/javascript" src="js/subscribe.js"></script>
+
     <script type="text/javascript">
         $(function () {
-            $('#defaultCountdown').countdown({since: new Date(2018, 2-1, 17, 11, 02, 0 ),// change this date to match yours, format is year, month-1, day, hour(24), min, sec
+            $('#defaultCountdown').countdown({since: new Date(2019, 12-1, 18, 12, 55, 0 ),// change this date to match yours, format is year, month-1, day, hour(24), min, sec
                 format: 'ODHMS'});
         });
     </script>
+
+    
+
 </head>
 <body>
 <!-- Main wrap div -->
 <div id="wrap">
     <!-- logo, to use yours, simply replace the png in images folder -->
     <div id="logo">
-        <a href="http://www.dianwu.win/five"><img class="png" src="images/logo.png" border="0"/></a>	</div>
+        <a href="http://www.dianwu.win/five"><img class="png" src="images/logo.png" border="0" alt="返回首页" title="返回首页" /></a>	</div>
     <!-- main content -->
     <div id="container">
         <ul id="lsn">
