--- a/five/index.html
+++ b/five/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="js/subscribe.js"></script>
     <script type="text/javascript">
         $(function () {
-            $('#defaultCountdown').countdown({since: new Date(2018, 2-1, 17, 11, 02, 0 ),// change this date to match yours, format is year, month-1, day, hour(24), min, sec
+            $('#defaultCountdown').countdown({since: new Date(2018, 1, 17, 11, 02, 0 ),// change this date to match yours, format is year, month-1, day, hour(24), min, sec
                 format: 'ODHMS'});
         });
     </script>
