--- a/five/index.html
+++ b/five/index.html
@@ -24,7 +24,7 @@
 <div id="wrap">
     <!-- logo, to use yours, simply replace the png in images folder -->
     <div id="logo">
-        <a href="http://www.dianwu.win/five"><img class="png" src="images/logo.png" border="0"/></a>	</div>
+        <a href="http://www.dianwu.win/"><img class="png" src="images/logo.png" border="0"/></a>	</div>
     <!-- main content -->
     <div id="container">
         <ul id="lsn">
