--- a/six/index.html
+++ b/six/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="Keywords" content="FIVE">
+    <meta name="Keywords" content="SIX">
     <meta name="description" content="SIX，始于2019年11月18日">
     <title>SIX，始于2019年11月18日</title>
     <!-- Style Sheet -->
@@ -29,7 +29,7 @@
 <div id="wrap">
     <!-- logo, to use yours, simply replace the png in images folder -->
     <div id="logo">
-        <a href="http://www.dianwu.win/five"><img class="png" src="images/logo.png" border="0" alt="返回首页" title="返回首页" /></a>	</div>
+        <a href="http://www.dianwu.win/"><img class="png" src="images/logo.png" border="0" alt="返回首页" title="返回首页" /></a>	</div>
     <!-- main content -->
     <div id="container">
         <ul id="lsn">
