--- a/newGo/index.html
+++ b/newGo/index.html
@@ -90,7 +90,7 @@
 				</tr>
 				<tr>
 				  <th scope="row">9</th>
-				  <td><a href="http://www.dianwu.win/fiv">赵春蓉.我爱你</a></td>
+				  <td><a href="http://www.dianwu.win/five">赵春蓉.我爱你</a></td>
 				  <td>180612</td>
 				  <td>220612</td>
 				</tr>
