--- a/index.html
+++ b/index.html
@@ -494,11 +494,51 @@
           
           陈总推荐的第一篇文章
 
-Vue概述1.1 认识VueVue (读音 /vjuː/，类似于 view) 是一套用于构建用户界面的渐进式框架。与其它大型框架不同的是，Vue 被设计为可以自底向上逐层应用。Vue 的核心库只关注视图层。Vue.js 的目标是通过尽可能简单的 API 实现响应的数据绑定和组合的视图组件。它不仅易于上手，还便于与第三方库或既有项目整合。另一方面，当与现代化的工具链以及各种支持类库结合使用时，Vue 也完全能够为复杂的单页应用提供驱动。
+Vue概述1.1 认识Vue
+ Vue (读音 /vjuː/，类似于 view) 是一套用于构建用户界面的渐进式框架。与其它大型框架不同的是，Vue 被设计为可以自底向上逐层应用。Vue 的核心库只关注视图层。Vue.js 的目标是通过尽可能简单的 API 实现响应的数据绑定和组合的视图组件。它不仅易于上手，还便于与第三方库或既有项目整合。另一方面，当与现代化的工具链以及各种支持类库结合使用时，Vue 也完全能够为复杂的单页应用提供驱动。
+ 前端框架三巨头：Vue.js、React.js、AngularJS，vue.js以其轻量易用著称，vue.js和React.js发展速度最快。
 
-前端框架三巨头：Vue.js、React.js、AngularJS，vue.js以其轻量易用著称，vue.js和React.js发展速度最快。
+
 渐进式：可以选择性的使用该框架的一个或一些组件，这些组件的使用也不需要将框架全部组件都应用；而且用了这些组件也不要求你的系统全部都使用该框架。
-版权声明：本文为CSDN博主「晒太阳的黑宝」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。原文链接：https://blog.csdn.net/qq_40301475/article/details/114744736
+1.2 MVVM模式1.2 MVVM模式
+
+2.2 VueJS 常用系统指令
+2.3 v-text与v-html
+2.4 v-bind
+2.5 v-model
+2.6 v-for
+2.6 v-if 和 v-show
+
+
+3. Vuejs生命周期
+
+vue生命周期：
+vue代码演示生命周期：
+
+
+4. Vuejs ajax
+
+4.1 axios
+4.2 get请求
+4.3 post请求
+
+
+5. 案例
+
+5.1 案例需求
+5.2 数据库设计与表结构
+5.3 服务器端
+5.3.1 配置文件
+5.3.2 domain
+5.3.3 dao
+5.3.4 service
+5.3.5 service.impl
+5.3.5 controller
+5.4 客户端
+
+
+所遇问题与解决方案版权声明：本文为CSDN博主「晒太阳的黑宝」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。原文链接：https://blog.csdn.net/qq_40301475/article/details/114744736
+
 
           
           <!--noindex-->
