--- a/five/index.html
+++ b/five/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="js/subscribe.js"></script>
     <script type="text/javascript">
         $(function () {
-            $('#defaultCountdown').countdown({since: new Date(2018, 1, 17, 11, 02, 0 ),// change this date to match yours, format is year, month-1, day, hour(24), min, sec
+            $('#defaultCountdown').countdown({since: new Date(2018, 2-1, 17, 11, 02, 0 ),// change this date to match yours, format is year, month-1, day, hour(24), min, sec
                 format: 'ODHMS'});
         });
     </script>
@@ -24,7 +24,7 @@
 <div id="wrap">
     <!-- logo, to use yours, simply replace the png in images folder -->
     <div id="logo">
-        <a href="http://www.dianwu.win/"><img class="png" src="images/logo.png" border="0"/></a>	</div>
+        <a href="http://www.dianwu.win/five"><img class="png" src="images/logo.png" border="0"/></a>	</div>
     <!-- main content -->
     <div id="container">
         <ul id="lsn">
