--- a/six/index.html
+++ b/six/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="Keywords" content="SIX">
+    <meta name="Keywords" content="FIVE">
     <meta name="description" content="SIX，始于2019年11月18日">
     <title>SIX，始于2019年11月18日</title>
     <!-- Style Sheet -->
@@ -14,9 +14,8 @@
     <script type="text/javascript" src="js/subscribe.js"></script>
 
     <script type="text/javascript">
-		//
         $(function () {
-            $('#defaultCountdown').countdown({since: new Date(2019, 10, 18, 12, 55, 0 ),// 月份为啥减一呢？？？change this date to match yours, format is year, month-1, day, hour(24), min, sec
+            $('#defaultCountdown').countdown({since: new Date(2019, 12-1, 18, 12, 55, 0 ),// change this date to match yours, format is year, month-1, day, hour(24), min, sec
                 format: 'ODHMS'});
         });
     </script>
@@ -29,7 +28,7 @@
 <div id="wrap">
     <!-- logo, to use yours, simply replace the png in images folder -->
     <div id="logo">
-        <a href="http://www.dianwu.win/"><img class="png" src="images/logo.png" border="0" alt="返回首页" title="返回首页" /></a>	</div>
+        <a href="http://www.dianwu.win/five"><img class="png" src="images/logo.png" border="0" alt="返回首页" title="返回首页" /></a>	</div>
     <!-- main content -->
     <div id="container">
         <ul id="lsn">
