--- a/newGo/index.html
+++ b/newGo/index.html
@@ -25,7 +25,7 @@
 		      <tbody>
 		        <tr>
 		          <th scope="row">1</th>
-		          <td><a href="">tenaim.com</a></td>
+		          <td><a href="http://106.13.218.236:10001">tenaim.com</a></td>
 		          <td>160522</td>
 		          <td>220522</td>
 				  <td>是</td>
@@ -33,7 +33,7 @@
 		        </tr>
 		        <tr>
 		          <th scope="row">2</th>
-		          <td><a href="">aiaera.com</a></td>
+		          <td><a href="http://106.13.218.236:10002/">aiaera.com</a></td>
 		          <td>160522</td>
 		          <td>220522</td>
 				  <td>是</td>
@@ -42,7 +42,7 @@
 		        </tr>
 		        <tr>
 		          <th scope="row">3</th>
-		          <td><a href="">jumeimy.com</a></td>
+		          <td><a href="http://106.13.218.236:10003">jumeimy.com</a></td>
 		          <td>150908</td>
 		          <td>220908</td>
 				  <td>否</td>
@@ -74,7 +74,7 @@
 				</tr>
 				<tr>
 				  <th scope="row">7</th>
-				  <td><a href="">fromxin.com</a></td>
+				  <td><a href="http://106.13.218.236:10000">fromxin.com</a></td>
 				  <td>200108</td>
 				  <td>230108</td>
 				  <td>否</td>
