--- a/newGo/index.html
+++ b/newGo/index.html
@@ -82,7 +82,7 @@
 				</tr>
 				<tr>
 				  <th scope="row">8</th>
-				  <td><a href="">dianwu.win</a></td>
+				  <td><a href="http://www.dianwu.win">dianwu.win</a></td>
 				  <td>160522</td>
 				  <td>260522</td>
 				  <td>否</td>
