--- a/newGo/index.html
+++ b/newGo/index.html
@@ -29,7 +29,7 @@
 		          <td>160522</td>
 		          <td>230522</td>
 				  <td>是</td>
-				  <td>时间管理</td>
+				  <td>十目标</td>
 		        </tr>
 		        <tr>
 		          <th scope="row">2</th>
@@ -37,7 +37,7 @@
 		          <td>160522</td>
 		          <td>230522</td>
 				  <td>是</td>
-				  <td>待启用/ai时代/爱儿啊</td>
+				  <td>ai时代/留言板</td>
 				  
 		        </tr>
 		        <tr>
@@ -46,7 +46,7 @@
 		          <td>150908</td>
 		          <td>230908</td>
 				  <td>否</td>
-				  <td>旅游网or本地论坛/资讯/发展</td>
+				  <td>本地门户</td>
 		        </tr>
 				<tr>
 				  <th scope="row">4</th>
@@ -54,7 +54,7 @@
 				  <td>170607</td>
 				  <td>230607</td>
 				  <td>否</td>
-				  <td>金融网站/咨询、投资理财</td>
+				  <td>社区。我为人人</td>
 				</tr>
 				<tr>
 				  <th scope="row">5</th>
@@ -70,7 +70,7 @@
 				  <td>200108</td>
 				  <td>230108</td>
 				  <td>否</td>
-				  <td>社区/实现网/点子众筹</td>
+				  <td>个人网站</td>
 				</tr>
 				<tr>
 				  <th scope="row">7</th>
@@ -78,7 +78,7 @@
 				  <td>200108</td>
 				  <td>230108</td>
 				  <td>否</td>
-				  <td>社区/个人实现</td>
+				  <td>从心阁</td>
 				</tr>
 				<tr>
 				  <th scope="row">8</th>
