--- a/newGo/index.html
+++ b/newGo/index.html
@@ -45,7 +45,7 @@
 		          <td><a href="http://106.13.218.236:10003">jumeimy.com</a></td>
 		          <td>150908</td>
 		          <td>230908</td>
-				  <td>否</td>
+				  <td>备案中</td>
 				  <td>本地门户</td>
 		        </tr>
 				<tr>
