--- a/newGo/index.html
+++ b/newGo/index.html
@@ -53,7 +53,7 @@
 				  <td><a href="">jiejinji.com</a></td>
 				  <td>170607</td>
 				  <td>230607</td>
-				  <td>否</td>
+				  <td>备案中</td>
 				  <td>社区。我为人人</td>
 				</tr>
 				<tr>
@@ -77,7 +77,7 @@
 				  <td><a href="http://106.13.218.236:10000">fromxin.com</a></td>
 				  <td>200108</td>
 				  <td>230108</td>
-				  <td>否</td>
+				  <td>备案中</td>
 				  <td>从心阁</td>
 				</tr>
 				<tr>
