--- a/six/index.html
+++ b/six/index.html
@@ -15,7 +15,7 @@
 
     <script type="text/javascript">
         $(function () {
-            $('#defaultCountdown').countdown({since: new Date(2019, 12-1, 18, 12, 55, 0 ),// change this date to match yours, format is year, month-1, day, hour(24), min, sec
+            $('#defaultCountdown').countdown({since: new Date(2019, 10, 18, 12, 55, 0 ),// change this date to match yours, format is year, month-1, day, hour(24), min, sec
                 format: 'ODHMS'});
         });
     </script>
