--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
           新浪云sae
 进入sae官网，注册账号，购买套餐
 进入sae控制台，创建应用
-进入应用，选择部署，选择上传代码，上传代码失败中
+进入应用，选择部署，选择上传代码，上传代码失败中2025年3月7日排查问题。新浪独立域名无法访问。提交工单等待回复。
 
 
           
